# mcp-crash-course

./: README.md  main.py  pyproject.toml
langchain-mcp-adapters/: langchain_client.py  main.py  pyproject.toml
langchain-mcp-adapters/servers/: weather_server.py
shellserver/: Dockerfile  README.md  pyproject.toml  server.py
shellserver/resources/: mcpreadme.md
